tests/ui/prevent_foreign_write.stderr
error[E0382]: borrow of moved value: `activated`
 --> tests/ui/prevent_foreign_write.rs:6:30
  |
5 |           let activated = r1.activate(token1);
  |               --------- move occurs because `activated` has type `ghost_borrows::RefMut<'_, i32>`, which does not implement the `Copy` trait
6 |           activated.borrow_mut(|_, _| {
  |                     -          ^^^^^^ value borrowed here after move
  |  ___________________|
  | |
7 | |             activated.write(|r1m| *r1m = 2);
  | |             --------- borrow occurs due to use in closure
8 | |         });
  | |__________- `activated` moved due to this method call
  |
note: `ghost_borrows::RefMut::<'tag, T>::borrow_mut` takes ownership of the receiver `self`, which moves `activated`
 --> src/refs.rs
  |
  |         self,
  |         ^^^^
